<resources>
    <string name="app_name">DVS Sample</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="button_submit">Submit</string>
    <string name="button_resend_email">Resend e-mail</string>
    <string name="button_confirmed">Confirmed</string>
    <string name="hint_setup_pin">Enter Pin</string>
    <string name="label_id">Id:</string>
    <string name="label_state">State:</string>
    <string name="label_customer_id">CustomerId:</string>
    <string name="label_backend">M-Pin backend:</string>
    <string name="button_login">Login</string>
    <string name="button_delete">Delete</string>
    <string name="label_authenticated_identity">You have been authenticated with identity:</string>
    <string name="label_register_dvs">After you have been successfully authenticated you could register the identity to the DVS service in order to sign documents with it.
Please, press the button to proceed.</string>
    <string name="button_dvs_register">DVS register</string>
    <string name="title_enter_pin_for_signing">Enter pin for signing</string>
    <string name="label_dvs_registered_identity">An identity %1$s has been registered for DVS. Now you can sign documents with it.</string>
    <string name="label_sign_message">Enter message to be signed</string>
    <string name="hint_sign_message">message</string>
    <string name="button_sign_message">Sign</string>
    <string name="label_signature">Signature</string>
    <string name="label_hash">hash:</string>
    <string name="label_u">u:</string>
    <string name="label_v">v:</string>
    <string name="label_mpin_id">mpinId:</string>
    <string name="label_public_key">publicKey:</string>
    <string name="label_dtas">dtas:</string>
    <string name="label_verification">Verification result</string>
    <string name="label_verified">verified:</string>
    <string name="label_status">status:</string>

    <!-- M-Pin configuration -->
    <string name="mpin_backend" formatted="false" translatable="false">https://api.mpin.io</string>
    <string name="mpin_cid" formatted="false" translatable="false"></string>

    <!-- Custom service configuration -->
    <string name="access_code_service_base_url" formatted="false" translatable="false"></string>
</resources>
