<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/authenticated_identity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_authenticated_identity" />

    <TextView
        android:id="@+id/user_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="asdasd@example.com" />

    <TextView
        android:id="@+id/register_dvs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/label_register_dvs" />

    <Button
        android:id="@+id/register_dvs_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_dvs_register"
        android:textColor="@android:color/white"/>
</LinearLayout>