<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/dvs_registered_identity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="An identity asdasd@example.com has been registered for DVS. Now you can sign documents with it." />

    <TextView
        android:id="@+id/sign_message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:labelFor="@+id/sign_message_input"
        android:text="@string/label_sign_message"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dvs_registered_identity_text" />

    <EditText
        android:id="@+id/sign_message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_sign_message"
        android:inputType="textShortMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_message_label"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/sign_message_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_message_input" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signature_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_message_button">

        <TextView
            android:id="@+id/signature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/label_signature"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signature_label" />

        <TextView
            android:id="@+id/hash_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_hash"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signature_label" />

        <TextView
            android:id="@+id/hash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            app:layout_constraintLeft_toRightOf="@+id/hash_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signature_label" />

        <TextView
            android:id="@+id/u_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_u"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hash_label" />

        <TextView
            android:id="@+id/u"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            app:layout_constraintLeft_toRightOf="@+id/u_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hash_label" />

        <TextView
            android:id="@+id/v_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_v"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/u_label" />

        <TextView
            android:id="@+id/v"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            app:layout_constraintLeft_toRightOf="@+id/v_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/u_label" />

        <TextView
            android:id="@+id/mpin_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mpin_id"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_label" />

        <TextView
            android:id="@+id/mpin_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            app:layout_constraintLeft_toRightOf="@+id/mpin_id_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_label" />

        <TextView
            android:id="@+id/public_key_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_public_key"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mpin_id_label" />

        <TextView
            android:id="@+id/public_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            app:layout_constraintLeft_toRightOf="@+id/public_key_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mpin_id_label" />

        <TextView
            android:id="@+id/dtas_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dtas"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/public_key_label" />

        <TextView
            android:id="@+id/dtas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            app:layout_constraintLeft_toRightOf="@+id/dtas_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/public_key_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verification_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signature_info">

        <TextView
            android:id="@+id/verification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/label_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verification_label" />

        <TextView
            android:id="@+id/verified_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_verified"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verification_label" />

        <TextView
            android:id="@+id/verified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toRightOf="@id/verified_label"
            app:layout_constraintTop_toBottomOf="@+id/verification_label" />

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_status"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verified_label" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintLeft_toRightOf="@id/status_label"
            app:layout_constraintTop_toBottomOf="@+id/verified_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
