<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/label_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/user_id_label"
                android:layout_toRightOf="@id/user_id_label"
                tools:text="asdasd@example.com" />

            <TextView
                android:id="@+id/user_state_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_id_label"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_state"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_id"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/user_state_label"
                android:layout_toRightOf="@id/user_state_label"
                tools:text="ACTIVATED" />

            <TextView
                android:id="@+id/user_backend_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_state_label"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_backend"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_backend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_state"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/user_backend_label"
                android:layout_toRightOf="@id/user_backend_label"
                tools:text="api.mpin.io" />

            <TextView
                android:id="@+id/user_cid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_backend_label"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_customer_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_cid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_backend"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/user_cid_label"
                android:layout_toRightOf="@id/user_cid_label"
                tools:text="6e6a1d7a-4ecd-482a-632a-f0b4e266a5cc" />

            <Button
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:text="@string/button_login"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/delete_user_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:layout_toLeftOf="@id/login_button"
                android:layout_toStartOf="@id/login_button"
                android:text="@string/button_delete"
                android:textColor="@android:color/holo_red_light" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
